# p4cherry

./: .gitignore  Makefile  README.md  diff  interestingness.sh  program.p4
docs/: index.html
lib/: dune
lib/c/: dune  pp.ml  syntax.ml
lib/compiler/: cimpl.ml  compile.ml  ctx.ml  dune  helper.ml
lib/driver/: driver.ml  dune
lib/exec/: dune  interp.ml
lib/instance/: dune  instantiate.ml
lib/runtime/: context.ml  ops.ml
p4/: dune-project
p4/lib/: dune
p4/lib/exec/: driver.ml
p4/lib/frontend/: dune  parse.ml  preprocessor.ml
p4/lib/frontend_native/: dune  preprocessor.ml
p4/lib/frontend_web/: dune  preprocessor.ml  preprocessor_p4pp.ml
p4/lib/p4pp/: ast.ml  bake.ml  dune  eval.ml  eval.mli  lexer.mll  prelexer.mll
p4/lib/runtime-static/: builtins.ml  numerics.ml
p4/lib/runtime-type/: subst.ml
p4/lib/stf/: dune  parse.ml  reader.ml
p4/lib/stf_native/: dune  reader.ml
p4/lib/stf_web/: dune  reader.ml
p4/lib/typing/: subtyp.ml
p4/test/: dune  test.ml
p4/web/: README.md  dune  web.ml  (+4 more)
p4spec/: dune-project
spec/: 2b2-runtime-value.watsup  2e-runtime-env.watsup  3-syntax-il.watsup  4a2-typing-context.watsup  4b-typing-relation.watsup  4c-typing-static-eval.watsup  4e-typing-expr.watsup  4f-typing-stmt.watsup  4g-typing-decl.watsup  5-2-exec-stmt.watsup  5a-exec-if.watsup  5a-runtime-lvalue.watsup  5b-runtime-tbl.watsup  5c-runtime-func.watsup  5d-runtime-object.watsup  5e-runtime-env.watsup  7a1-exec-domain.watsup  7a2-exec-context.watsup  7b-exec-relation.watsup  7c-exec-expr.watsup  7d-exec-stmt.watsup  7e-exec-decl.watsup  TODO.md
(+65 files in other folders)
